samples/_failures_safe/1761556849_3bde63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25b9aac8.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_25b9aac8.c:142:5: error: expected expression at end of input
  142 |     for (
      |     ^~~
./samples/SAFE/__tmp_25b9aac8.c:142:5: error: expected declaration or statement at end of input
